style demarche ok

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/dev/images/alixbocquier_favicon.png"
+      href="sources/favicon.png"
     />
     <title>FRIPON | Éducation canine</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,7 +32,7 @@
 
       <section id="presentation">
         <div id="presentation__txt">
-          <h1>Éducation canine & promenades joyeuses</h1>
+          <h1>Éducation canine<br>& promenades joyeuses</h1>
           <p>
             Ensemble on explore comment mieux comprendre ton bolide, répondre à
             vos besoins mutuels et bâtir une relation harmonieuse.
@@ -95,28 +95,39 @@
         </div>
         <div id="demarche__liste">
           <div class="demarche-card">
-            <p>1</p>
+            <p class="demarche-card-num">1</p>
             <h3>Premier échange</h3>
             <p>
-              Un premier échange de 30 minutes pour faire connaissance et
+              Un premier échange de <span>30 minutes</span> pour faire connaissance et
               t’expliquer mon mode de fonctionnement et mes méthodes.
             </p>
+            <button>Gratuit</button>
           </div>
           <div class="demarche-card">
-            <p>2</p>
-            <h3>Premier échange</h3>
+            <p class="demarche-card-num">2</p>
+            <h3>Première rencontre</h3>
             <p>
-              Un premier échange de 30 minutes pour faire connaissance et
-              t’expliquer mon mode de fonctionnement et mes méthodes.
+              À domicile, j’observe ton chien dans son environnement, je
+              comprends vos besoins et construis un <span>plan d’entraînement</span> qui y
+              répond.
             </p>
+            <ul>
+              <li>Bilan comportemental (1h30) - 80€</li>
+              <li>1er rendez-vous éducation (1h) - 50€</li>
+            </ul>
           </div>
           <div class="demarche-card">
-            <p>3</p>
-            <h3>Premier échange</h3>
+            <p class="demarche-card-num">3</p>
+            <h3>Suivi & entrainement</h3>
             <p>
-              Un premier échange de 30 minutes pour faire connaissance et
-              t’expliquer mon mode de fonctionnement et mes méthodes.
+              On avance pas à pas : des sessions ensemble pour <span>progresser</span> et
+              <span>t’accompagner</span> dans ton quotidien et les nouvelles situations que
+              tu rencontres.
             </p>
+            <ul>
+              <li>Suivi chiot (1h) - 40€</li>
+              <li>Suivi chien adulte (1h) : 45€</li>
+            </ul>
           </div>
         </div>
       </section>
