--- a/index.html
+++ b/index.html
@@ -58,67 +58,6 @@
           </p>
         </div>
         <div id="services__liste">
-          <div class="services__card">
-            <img src="sources/icons/trefle.svg" alt="" />
-            <div class="services__card__txt">
-              <h3>Promenades au grand air</h3>
-              <p>
-                Des sorties 100% plaisir en ton absence, pour explorer et
-                interagir avec son environnement, sans contraintes éducatives.
-              </p>
-              <button>En savoir plus</button>
-            </div>
-            <div class="services__card__tarifs">
-              <h3>32€</h3>
-              <h4>/2h</h4>
-            </div>
-          </div>
-          <div class="services__card">
-            <img src="sources/icons/patte.svg" alt="" />
-            <div class="services__card__txt">
-              <h3>Education du chiot (- de 8 mois)</h3>
-              <p>
-                Des séances individuelles pour offrir les bonnes bases à ton
-                chiot, t’aider à le comprendre et construire une relation de
-                confiance avec toi.
-              </p>
-              <button>En savoir plus</button>
-            </div>
-            <div class="services__card__tarifs">
-              <h3>40€</h3>
-              <h4>/1h</h4>
-            </div>
-          </div>
-          <div class="services__card">
-            <img src="sources/icons/os.svg" alt="" />
-            <div class="services__card__txt">
-              <h3>Education du chien adulte</h3>
-              <p>
-                Des séances individuelles pour t’aider à communiquer avec ton
-                chien et retrouver de la fluidité dans votre quotidien ensemble.
-              </p>
-              <button>En savoir plus</button>
-            </div>
-            <div class="services__card__tarifs">
-              <h3>45€</h3>
-              <h4>/1h</h4>
-            </div>
-          </div>
-          <div class="services__card">
-            <img src="sources/icons/puzzle.svg" alt="" />
-            <div class="services__card__txt">
-              <h3>Rééducation/désensibilisation</h3>
-              <p>
-                Des séances d’entrainements pour t’aider à solutionner des
-                petits et gros couacs de comportement au quotidien.
-              </p>
-              <button>En savoir plus</button>
-            </div>
-            <div class="services__card__tarifs">
-              <h3>45€</h3>
-              <h4>/1h</h4>
-            </div>
-          </div>
           <div class="bloc__tips">
             <img src="sources/icons/idee.svg" alt="" />
             <div>
@@ -251,5 +190,43 @@
     <div class="legal">
       <p>Copyright © 2025 Fripon. Tous droits réservés.</p>
     </div>
+
+    <div class="modal">
+      <div class="modal__intro">
+        <h2>Promenade au grand air</h2>
+        <img src="sources/icons/close.svg" alt="" />
+      </div>
+      <div class="modal__content">
+        <div class="modal__content__titre">
+          <img src="sources/icons/chien.svg" alt="" />
+          <h3>Pour qui ?</h3>
+        </div>
+        <ul>
+          <li>
+            Chiens de tout âge ayant besoin de se dépenser et de varier leurs
+            sorties.
+          </li>
+          <li>
+            Idéal si tu manques de temps ou si ton chien est très énergique.
+          </li>
+        </ul>
+      </div>
+      <div class="modal__content">
+        <div class="modal__content__titre">
+          <img src="sources/icons/chien.svg" alt="" />
+          <h3>Pour qui ?</h3>
+        </div>
+        <ul>
+          <li>
+            Chiens de tout âge ayant besoin de se dépenser et de varier leurs
+            sorties.
+          </li>
+          <li>
+            Idéal si tu manques de temps ou si ton chien est très énergique.
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
