--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
             Ensemble on explore comment mieux comprendre ton bolide, répondre à
             vos besoins mutuels et bâtir une relation harmonieuse.
           </p>
-          <button class="boutonAction">Découvrir les services</button>
+          <button class="boutonAction">
+            Découvrir les services
+            <div>
+              <img src="sources/icons/fleche-button.svg" alt="" />
+            </div>
+          </button>
         </div>
         <div id="presentation__img">
           <img src="sources/chienchien.png" alt="" />
@@ -58,6 +63,7 @@
           </p>
         </div>
         <div id="services__liste">
+          <div></div>
           <div class="bloc__tips">
             <img src="sources/icons/idee.svg" alt="" />
             <div>
@@ -163,7 +169,12 @@
             Chez Fripon, on ne cherche pas des chiens parfaits, mais des chiens
             bien dans leurs pattes et libres dans leur tête.
           </p>
-          <button class="boutonAction">Rencontrons-nous</button>
+          <button class="boutonAction">
+            Rencontrons-nous
+            <div>
+              <img src="sources/icons/fleche-button.svg" alt="" />
+            </div>
+          </button>
         </div>
       </div>
     </section>
@@ -191,42 +202,39 @@
       <p>Copyright © 2025 Fripon. Tous droits réservés.</p>
     </div>
 
-    <div class="modal">
-      <div class="modal__intro">
-        <h2>Promenade au grand air</h2>
-        <img src="sources/icons/close.svg" alt="" />
-      </div>
-      <div class="modal__content">
-        <div class="modal__content__titre">
-          <img src="sources/icons/chien.svg" alt="" />
-          <h3>Pour qui ?</h3>
+    <section id="modal__liste">
+      <div class="modal__card">
+        <div class="modal__card__intro">
+          <h2></h2>
+          <img src="sources/icons/close.svg" alt="" />
         </div>
-        <ul>
-          <li>
-            Chiens de tout âge ayant besoin de se dépenser et de varier leurs
-            sorties.
-          </li>
-          <li>
-            Idéal si tu manques de temps ou si ton chien est très énergique.
-          </li>
-        </ul>
-      </div>
-      <div class="modal__content">
-        <div class="modal__content__titre">
-          <img src="sources/icons/chien.svg" alt="" />
-          <h3>Pour qui ?</h3>
+        <div class="modal__card__content modal__card__paragraphe1">
+          <div>
+            <img src="sources/icons/chien.svg" alt="" />
+            <h3></h3>
+          </div>
         </div>
-        <ul>
-          <li>
-            Chiens de tout âge ayant besoin de se dépenser et de varier leurs
-            sorties.
-          </li>
-          <li>
-            Idéal si tu manques de temps ou si ton chien est très énergique.
-          </li>
-        </ul>
+        <div class="modal__card__content modal__card__paragraphe2">
+          <div>
+            <img src="sources/icons/cible.svg" alt="" />
+            <h3></h3>
+          </div>
+        </div>
+        <div class="modal__card__content modal__card__paragraphe3">
+          <div>
+            <img src="sources/icons/setting.svg" alt="" />
+            <h3></h3>
+          </div>
+        </div>
+        <div class="modal__card__content modal__card__paragraphe4">
+          <div>
+            <img src="sources/icons/map.svg" alt="" />
+            <h3></h3>
+          </div>
+          <p></p>
+        </div>
       </div>
-    </div>
+    </section>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
