divider presentation + demarches ok

--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
     </section>
 
     <img id="fleche" src="sources/fleche.png" alt="" />
-    <img class="img-bg" src="sources/forme-presentation.svg" alt="" />
+    <svg id="divider-presentation"
+      width="3600"
+      viewBox="0 0 3600 330"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <rect width="3600" height="330" fill="#F9F3E8" />
+      <path
+        d="M3600 238.951C3550.98 290.781 3484.35 324.454 3410.86 330H3366.37L3356.66 329.483L3372.77 26.9805L3372.77 26.9795L3356.66 329.483C3243.95 323.481 3149.57 252.637 3105.61 153.789C3051.41 247.409 2950.04 307.83 2837.33 301.828L2802.79 299.988L2800.9 299.882C2689.02 293.191 2595.46 222.588 2551.75 124.295C2497.54 217.915 2396.17 278.336 2283.46 272.334L2248.92 270.494C2136.21 264.492 2041.83 193.648 1997.88 94.8008C1943.67 188.421 1842.3 248.841 1729.59 242.839L1695.06 241L1693.16 240.894C1581.29 234.202 1487.72 163.599 1444.01 65.3066C1389.8 158.927 1288.44 219.347 1175.72 213.345L1141.19 211.506C1028.47 205.504 934.096 134.66 890.14 35.8125C835.934 129.432 734.567 189.853 621.854 183.851L587.318 182.012C474.606 176.009 380.226 105.166 336.271 6.31836C282.065 99.9382 180.698 160.359 67.9854 154.356L50.7178 153.438C33.3365 152.512 16.3916 150.042 0 146.168V0H597.011L595.888 21.0996L597.012 0H3600V238.951Z"
+        fill="#FFDE45"
+      />
+    </svg>
+
+    <!--<img class="img-bg" src="sources/forme-presentation.svg" alt="" />-->
 
     <section id="services">
       <div class="marginSite">
@@ -79,7 +92,21 @@
       </div>
     </section>
 
-    <img class="img-bg bg-services" src="sources/forme-services.svg" alt="" />
+    <!--    <img class="img-bg bg-services" src="sources/forme-services.svg" alt="" />-->
+
+    <svg
+      id="divider-services"
+      width="3600"
+      viewBox="0 0 3600 739"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <rect y="1" width="3600" height="680" fill="white" />
+      <path
+        d="M3600 136.688C3557.65 205.501 3510.31 269.188 3457.43 326.485C3207.07 597.751 2740.86 726.552 2222.03 738.25H2063.93C1275.19 720.885 405.603 447.665 0 3.22461V0.75H3600V136.688Z"
+        fill="#F9F3E8"
+      />
+    </svg>
 
     <section id="demarche">
       <div class="marginSite">
@@ -141,19 +168,21 @@
         </div>
       </div>
       <!--<img class="img-bg bg-demarche" src="sources/forme-demarche.svg" alt="" />-->
-      <svg
-        width="1439"
-        height="127"
-        viewBox="0 0 1439 127"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M0 37.9624C0 37.9624 147.541 0 377.474 0C607.407 0 784.648 125.874 1035.66 125.874C1270.38 125.874 1352.77 45.0822 1439 37.9624V127H0V37.9624Z"
-          fill="#F9F3E8"
-        />
-      </svg>
     </section>
+
+    <svg
+      id="divider-demarche"
+      width="3600"
+      viewBox="0 0 3600 318"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <rect x="1182" y="96" width="2418" height="222" fill="white" />
+      <path
+        d="M0 95.0554C0 95.0554 369.108 0 944.341 0C1519.57 0 1962.98 315.18 2590.95 315.18C3178.16 315.18 3384.29 112.883 3600 95.0554V318H0V95.0554Z"
+        fill="#F9F3E8"
+      />
+    </svg>
 
     <section id="about">
       <div class="marginSite">
