--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         </div>
         <div id="presentation__img">
           <img src="sources/chienchien.png" alt="" />
-          <img class="wouf gauche" src="sources/wouf.png" alt="" />
-          <img class="wouf droite" src="sources/wouf.png" alt="" />
+          <img class="wouf gauche rotate1" src="sources/wouf.png" alt="" />
+          <img class="wouf droite rotate2" src="sources/wouf.png" alt="" />
         </div>
       </div>
     </section>
 
-    <img id="fleche" src="sources/fleche.png" alt="" />
+    <img id="fleche" class="transi-fleche" src="sources/fleche.png" alt="" />
     <svg id="divider-presentation"
       width="3600"
       viewBox="0 0 3600 330"
@@ -237,8 +237,8 @@
           />
         </svg>
         <div id="contact__img">
-          <img class="wouf gauche" src="sources/wouf.png" alt="" />
-          <img class="wouf droite" src="sources/wouf.png" alt="" />
+          <img class="wouf gauche rotate1" src="sources/wouf.png" alt="" />
+          <img class="wouf droite rotate2" src="sources/wouf.png" alt="" />
         </div>
         <h2>Parlons de ton bolide</h2>
         <div id="contact__coordonnees">
@@ -296,6 +296,7 @@
             <h3></h3>
           </div>
           <ul></ul>
+          <p class="infoDeplacement"></p>
         </div>
         <div class="modal__card__content modal__card__paragraphe4">
           <div>
